# edit

./: .gitignore  AGENTS.md  README.md  TODO  drizzle.config.ts  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: bottom-terminal.tsx  branch-selector.tsx  browser-view.tsx  chat-creation.tsx  chat-input.tsx  chat-sidebar.tsx  chats-bar.tsx  commit-button.tsx  custom-command-buttons.tsx  custom-commands-dialog.tsx  edits-panel.tsx  file-bar.tsx  file-tree.tsx  file-viewer.tsx  git-commit.tsx  loader.tsx  message.tsx  modeselect.tsx  providers.tsx  remote-toggle.tsx  right-sidebar.tsx  session-diff-drawer.tsx  terminal-input.tsx  workspace-directory-palette.tsx
db/: index.ts  schema.ts
drizzle/: 0000_acoustic_star_brand.sql  0001_happy_la_nuit.sql  0002_pretty_ultimates.sql
electron/: main.ts  preload.ts
hooks/: use-socket.ts
lib/: catalog.ts  chat-store-utils.ts  chat-store.tsx  chat-types.ts  client.ts  custom-commands.ts  eden.ts  prisma.ts  registry.ts  session-param.ts  tauri-api.ts  tool.ts  use-tauri-chat.tsx  utils.ts
prisma/: schema.prisma
sandbox/: abc.md  crazy.ts
scripts/: build-electron.ts  run-electron.sh
server/: agent-browser.ts  app.ts  index.ts  store.ts
src/: App.tsx  ai.ts  main.tsx  router.tsx  test.ts  tools.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
store/: store.ts
(+55 files in other folders)
