[package]
name = "edit"
version = "0.2.0"
description = "AI-powered coding assistant"
authors = ["thetanav"]
edition = "2021"

[lib]
name = "edit_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sha1 = "0.10"
glob = "0.3"
futures = "0.3"
hex = "0.4"
dirs = "6"
regex = "1"
once_cell = "1"
